--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,189 @@
-.App {
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+a{
+  text-decoration: none;
+  color: #555;
+}
+p{
+  color: #555;
+}
+.container{
+  max-width: 1260px;
+  margin: auto;
+  padding-left: 25px;
+  padding-right: 25px;
+}
+.row{
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-around;
+}
+.col-2{
+  flex-basis: 50%;
+  min-width: 300px;
+  padding-left: 20px;
+}
+.col-2 img{
+  max-width: 100%;
+  padding: 50px 0;
+}
+.col-2 h1{
+  font-size: 50px;
+  line-height: 60px;
+  margin: 25px 0;
+}
+.btn{
+  display: inline-block;
+  background: #ff5235;
+  color: #fff;
+  padding: 8px 30px;
+  margin: 30px 0;
+  border-radius: 30px;
+  border: 1px solid lime;
+  transition: all linear0.5s;
+}
+.btn:hover{
+  background:#563434;
+}
+.header{
+  background: radial-gradient(#fff,#f5e9e9);
+}
+.header .row{
+  margin-top: 40px;
+}
+.menu-icon{
+  width: 28px;
+  margin-left: 20px;
+  display: none;
+}
+
+/* // categories section */
+
+.categories{
+  margin: 70px 0;
+}
+.col-3{
+  flex-basis: 32%;
+  max-width: 250px;
+  margin-bottom: 25px;
+}
+.col-3 img{
+  width: 100%;
+}
+.small-container{
+  max-width: 980px;
+  margin: auto;
+  padding: 0 25px;
+}
+
+/* Footer section  */
+.footer{
+  background: rgba(0, 0, 0, 0.932);
+  color: #ebe9e9;
+  font-size: 14px;
+  padding: 60px 0 20px;
+}
+.footer p{
+  color: #dcd8d8;
+  /* margin-bottom: 20px; */
+  margin-top: 7px;
+}
+.footer h3{
+  margin-bottom: 5px;
+}
+.footer-col-1, .footer-col-2, .footer-col-3, .footer-col-4{
+  min-width: 200px;
+  margin-bottom: 20px;
+}
+.footer-col-1{
+  flex-basis: 30%;
+}
+.footer-col-2 img{
+  width: 160px;
+  margin-bottom: 20px;
+}
+.footer-col-2{
+  flex: 1;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.footer-col-3, .footer-col-4{
+  flex-basis: 12%;
+  text-align: center;
+}
+ul{
+  list-style-type: none;
+}
+.app-logo{
+  margin-top: 20px;
+}
+.app-logo img{
+  width: 120px;
+}
+.footer hr{
+  border: none;
+  background: #b5b5b5;
+  height: 1px;
+  margin: 20px 0;
+}
+.copyright{
+  text-align: center;
+  padding-bottom: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+/* fitter part */
+#filter, #latest-header{
+  padding: 40px 0;
+  background: #e9e9e9;
+}
+.filter-header{
+  position: relative;
+  padding-bottom: 25px;
+}
+
+.filter-part p{
+display: inline-block;
+padding-left: 25px;
+border-left: 2px solid grey;
+margin-right: 20px;
+}
+
+
+
+
+@media only screen and (max-width: 740px){
+  nav ul{
+      position: absolute;
+      background: #333;
+      width: 100%;
+      left: 0;
+      top: 70px;
+      overflow: hidden;
+      transition: max-height 0.5s;
+  }
+  nav ul li{
+      display: block;
+      margin-left: 50px;
+      margin: 10px 10px;
+  }
+  nav ul li a{
+      color: #fff;
+  }
+  .menu-icon{
+      display: block;
+      cursor: pointer;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+/* ---------- media query for responsive mobile device -------- */
+@media only screen and (max-width: 640px){
+  .row{
+      text-align: center;
   }
-  to {
-    transform: rotate(360deg);
+  .col-2, .col-3, .col-4{
+      flex-basis: 100%;
   }
 }
